# tada-rust

./: Cargo.toml  LICENSE  README.md  theme.yml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/adapters/: audio.rs  config.rs  mod.rs  quran_api.rs  storage.rs
src/application/: dto.rs  mod.rs  ports.rs  usecases.rs
src/domain/: mod.rs
src/interfaces/: app.rs  cli.rs  doctor.rs  interactive.rs  mod.rs  output.rs
src/interfaces/tui/: actions.rs  input.rs  mod.rs  render.rs  theme.rs
target-codex/: .rustc_info.json
tests/: cli_smoke.rs  help_docs.rs
