[package]
name = "tada-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
crossterm = "0.29"
directories = "6.0"
indicatif = "0.18"
inquire = "0.9"
owo-colors = "4.2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rodio = "0.21"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2.0"
urlencoding = "2.1"
webbrowser = "1.0"
arabic_reshaper = "0.4.2"
unicode-bidi = "0.3.18"
unicode-normalization = "0.1.25"
textwrap = "0.16.2"
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.22"
